# digital_straight_line

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  predicate_2d.sln
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/impl/core2d/: ConvexPolygon.cpp  DigitalSegment.cpp  MBRegion.cpp  Quad.cpp  Triangle.cpp
lib/public/core2d/: ConvexPolygon.h  DigitalSegment.h  MBRegion.h  Polygon.h  Quad.h  Triangle.h
lib/public/utils/: Debugger.h  LineGenerator.h
predicate_2d/: ConvexPolygon2D.cpp  ConvexPolygon2D.h  DigitalSegment.cpp  DigitalSegment.h  MBRegion.cpp  MBRegion.h  ReadMe.txt  convex_polygon2d.cpp  convex_polygon2d.h  digital_segment.cpp  digital_segment.h  mb_region.cpp  mb_region.h  polygon.cpp  polygon.h  polygon2d.cpp  polygon2d.h  predicate_2d.cpp  predicate_2d.vcxproj  predicate_2d.vcxproj.filters  quad2d.cpp  quad2d.h  stdafx.cpp  triangle2d.cpp  triangle2d.h
predicate_2d/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  predicate_2d.lastbuildstate  vc110.idb
rational_polygon_2d/: Debugger.h  LineGenerator.h  straight_line.h
src/predicate2d/: Polygon.h  Polygon2D.cpp
