cmake_minimum_required(VERSION 3.19)
set(CMAKE_CXX_STANDARD 17)
project(DigitalStraightLines)

# ------------------------------------------------------------------------------

add_subdirectory(lib)
add_subdirectory(app)

# ------------------------------------------------------------------------------